[package]
name = "pomerge"
version = "0.1.0"
authors = ["Grollicus"]
edition = "2018"
description = "Resolves git-style merge conflicts in PO files."
homepage = "https://github.com/Grollicus/pomerge"

[dependencies]
regex = "1.4.6"
lazy_static = "1.4.0"
clap = "2.33.3"

[dev-dependencies]
pretty_assertions = "0.7.2"
